<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:windowBackground"
    tools:context=".Activities.RegistrationActivity">



    <TextView
        style="@style/MainHeaderTextviewStyle"
        android:id="@+id/tv_registration_header"
        android:layout_marginTop="17dp"
        android:text="Registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_registration_main_container"
        style="@style/RoundedContainerStyle"
        android:layout_width="365dp"
        android:layout_height="404dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315
">

        <EditText
            android:id="@+id/et_registration_name"
            style="@style/BodyRoundedEditTextStyle"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Enter Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_registration_name_header"
            style="@style/HeaderRoundedEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            app:layout_constraintBottom_toTopOf="@+id/et_registration_name"
            app:layout_constraintEnd_toEndOf="@+id/et_registration_name"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/et_registration_name" />

        <EditText
            android:id="@+id/et_registration_email"
            style="@style/BodyRoundedEditTextStyle"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Enter Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registration_name" />

        <TextView
            android:id="@+id/tv_registration_email_header"
            style="@style/HeaderRoundedEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            app:layout_constraintBottom_toTopOf="@+id/et_registration_email"
            app:layout_constraintEnd_toEndOf="@+id/et_registration_email"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/et_registration_email" />

        <EditText
            android:id="@+id/et_registration_phone"
            style="@style/BodyRoundedEditTextStyle"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="Optional"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registration_email" />

        <TextView
            android:id="@+id/tv_registration_phone_header"
            style="@style/HeaderRoundedEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            app:layout_constraintBottom_toTopOf="@+id/et_registration_phone"
            app:layout_constraintEnd_toEndOf="@+id/et_registration_phone"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/et_registration_phone" />

        <TextView
            android:id="@+id/tv_registration_role_header"
            style="@style/HeaderRoundedEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Role"
            app:layout_constraintBottom_toTopOf="@+id/btn_registration_entrant"
            app:layout_constraintEnd_toEndOf="@+id/btn_registration_admin"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/btn_registration_entrant" />

        <ToggleButton
            android:id="@+id/btn_registration_entrant"
            style="@style/ToggleRoundedButton"
            android:layout_width="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button_background_selector"
            android:textOn="Entrant"
            android:textOff="Entrant"
            android:textSize="12dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registration_phone" />

        <ToggleButton
            android:id="@+id/btn_registration_organizer"
            style="@style/ToggleRoundedButton"
            android:layout_width="100dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button_background_selector"
            android:textOn="Organizer"
            android:textOff="Organizer"
            android:textSize="12dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_registration_admin"
            app:layout_constraintStart_toEndOf="@+id/btn_registration_entrant"
            app:layout_constraintTop_toBottomOf="@+id/et_registration_phone" />

        <ToggleButton
            android:id="@+id/btn_registration_admin"
            style="@style/ToggleRoundedButton"
            android:layout_width="100dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_background_selector"
            android:textOn="Admin"
            android:textOff="Admin"
            android:textSize="12dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registration_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_registration_login"
        style="@style/RoundedButton"
        android:text="Log In"
        android:layout_width="175dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_registration_main_container" />

    <Button
        android:id="@+id/btn_registration_signup"
        style="@style/RoundedButton"
        android:text="Sign Up"
        android:layout_width="175dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_registration_main_container" />


</androidx.constraintlayout.widget.ConstraintLayout>
