...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Please enter the admin passphrase" />

    <EditText
        android:id="@+id/et_admin_guard_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text"
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="Cancel" />

        <Button
            android:id="@+id/btn_admin_guard_confirm"
            style="@style/RoundedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Confirm" />
    </LinearLayout>
...
